--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@ocwebutils/sanitychecker_rules",
-	"version": "1.0.0-beta.3",
+	"name": "@ocwebutils/sc_rules",
+	"version": "1.0.0-beta.4",
 	"license": "GPL-3.0",
 	"private": true
 }
