--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
 	"name": "@ocwebutils/sc_rules",
 	"version": "1.0.0-beta.6",
 	"license": "GPL-3.0",
-	"private": true
+	"private": true,
+	"main": "index.mjs",
+	"scripts": {
+		"prepare": "node index.mjs"
+	}
 }
