chore(package): set license to `MIT`

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@ocwebutils/sc_rules",
 	"version": "1.0.0",
-	"license": "GPL-3.0",
+	"license": "MIT",
 	"private": true,
 	"main": "index.mjs",
 	"scripts": {
